2020-09-30  Alexander Lind  <A.Lind@sussex.ac.uk>

	* src/user_interface.f90: Added dependency. 
	* src/Makefile.am: Fixed compilation of user interface. 
	* src/input.f90: Moved alphas to common_vars.f90, as it will be used by the user interface. 

2020-09-29  Alexander Lind  <A.Lind@sussex.ac.uk>

	* src/scalar_integrals.f90: Small changes and improvements to use of HPLs. 
	* src/hboson.f90: Improvements to CP-odd amplitudes and addition of infinite mass limit for CP-odd case. 
	* src/cross_sections.f90: Minor revisions. 
	* src/input.f90: Minor revisions. 
	* src/h1jet.f90: Minor revisions. 

2020-09-02  Alexander Lind  <A.Lind@sussex.ac.uk>

	* src/hboson.f90: Minor cleaning up. 
	* bin/PlotH1jet.py: Updated from Python 2 to 3 and made small improvements. 

2020-08-31  Alexander Lind  <A.Lind@sussex.ac.uk>

	* src/input.f90: Minor cleaning up and bug fixes. 
	* src/hboson.f90: Minor cleaning up. 
	* src/banner.f90: Updated help message. 
	* configure.ac: Updated the setting of USERFILE_OBJ. 
	* Makefile.am: Updated the setting of USERFILE_OBJ. 
	* src/Makefile.am: Updated the setting of USERFILE_OBJ. 

2020-08-26  cslp018871  <ab625@cslp018871>

	* src/h1jet.f90: This is the starting version, with all files established. Needs to be checked for CP-odd Higgs
