@@ -1,3 +1,8 @@
+2024-09-27  Alexander Lind  <alexlind@subatech.in2p3.fr>
+
+	* src/h1jet.f90: Fix the output for the integrated cross-section when using logarithmic bins.
+	* src/banner.f90: Update version number to 1.0.1.
+
 2020-09-30  Alexander Lind  <A.Lind@sussex.ac.uk>
 
 	* src/user_interface.f90: Added dependency. 
